syntax="proto3";

option go_package="./livescore";


message Greeting {
  string first_name=1;
  string last_name=2;
}

message GreetRequest {
  Greeting greeting=1;
}
message GreetResponse{
  string result=1;
}


service GreetService{
  //unary
  rpc Greet(GreetRequest) returns (GreetResponse){};
}




